[gd_scene load_steps=11 format=3 uid="uid://d104uhmv1ql6y"]

[ext_resource type="Texture2D" uid="uid://db5nce76d2ald" path="res://recordstoreconcept.png" id="1_asr3e"]
[ext_resource type="Script" path="res://scenes/MainMenuController.gd" id="1_j5cn7"]
[ext_resource type="Script" path="res://scenes/MainMenuOptionsButton.gd" id="3_aqkjy"]
[ext_resource type="FontFile" uid="uid://blg7yt51sptg8" path="res://FohrScore.otf" id="3_rxo04"]
[ext_resource type="Script" path="res://scenes/MainButtonsNavigationController.gd" id="4_yh2v0"]
[ext_resource type="StyleBox" uid="uid://b6cve5oc3vkj3" path="res://scripts/MainMenuButtonStyleBox.tres" id="5_dwcvw"]
[ext_resource type="ButtonGroup" uid="uid://dg0xujngn5clo" path="res://scripts/new_button_group.tres" id="5_p2d13"]
[ext_resource type="Texture2D" uid="uid://cvybp0m1ur83l" path="res://scripts/5ac3377f2741e0cd361e52213305ecd8.png" id="6_lx0aq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ym28w"]
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.439216, 0.647059, 0.733333, 1)
skew = Vector2(0.1, 0.1)
border_color = Color(0, 0, 0, 0.580392)
border_blend = true
corner_detail = 5
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_neaww"]
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.439216, 0.647059, 0.733333, 1)
skew = Vector2(0.1, 0.1)
border_color = Color(0, 0, 0, 0.580392)
border_blend = true
corner_detail = 5
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Control" node_paths=PackedStringArray("firstSelected")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j5cn7")
firstSelected = NodePath("MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_asr3e")
expand_mode = 3
stretch_mode = 4

[node name="MenuContainer" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2

[node name="LogoContainer" type="Control" parent="MenuContainer"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.5

[node name="RichTextLabel" type="RichTextLabel" parent="MenuContainer/LogoContainer"]
layout_mode = 0
offset_right = 1068.0
offset_bottom = 455.0
theme_override_colors/default_color = Color(0.921569, 0.941176, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 100
theme_override_fonts/normal_font = ExtResource("3_rxo04")
theme_override_fonts/bold_font = ExtResource("3_rxo04")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 250
bbcode_enabled = true
text = "[b]METAL..
FINGAZ
"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="MainOptionsContainer" type="Control" parent="MenuContainer"]
layout_mode = 1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="MainButtons" type="VBoxContainer" parent="MenuContainer/MainOptionsContainer"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 282.0
grow_vertical = 2
theme_override_constants/separation = 25
script = ExtResource("4_yh2v0")

[node name="MenuRootButton" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_rxo04")
theme_override_font_sizes/font_size = 37
theme_override_styles/normal = ExtResource("5_dwcvw")
theme_override_styles/hover = ExtResource("5_dwcvw")
theme_override_styles/pressed = ExtResource("5_dwcvw")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ym28w")
theme_override_styles/focus = SubResource("StyleBoxFlat_neaww")
toggle_mode = true
button_group = ExtResource("5_p2d13")
text = " Single Player"
icon = ExtResource("6_lx0aq")
alignment = 0
text_overrun_behavior = 1
icon_alignment = 2
script = ExtResource("3_aqkjy")

[node name="SubMenu" type="Control" parent="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 50.0
offset_right = 223.0
offset_bottom = 174.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton/SubMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.913725, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton/SubMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton/SubMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Lab Mode"

[node name="Button2" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton/SubMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Challenge Tower"

[node name="MultiPlayer3" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/normal = ExtResource("5_dwcvw")
toggle_mode = true
button_group = ExtResource("5_p2d13")
text = "single player"
script = ExtResource("3_aqkjy")

[node name="SubMenu" type="Control" parent="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 50.0
offset_right = 223.0
offset_bottom = 174.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3/SubMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.227451, 0.913725, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3/SubMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3/SubMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Lab Mode"

[node name="Button2" type="Button" parent="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3/SubMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Challenge Tower"

[node name="Exit" type="Button" parent="MenuContainer/MainOptionsContainer"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -222.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
text = "Exit"

[connection signal="pressed" from="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton" to="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton" method="_on_pressed"]
[connection signal="toggled" from="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton" to="MenuContainer/MainOptionsContainer/MainButtons/MenuRootButton" method="_on_toggled"]
[connection signal="pressed" from="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3" to="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3" method="_on_pressed"]
[connection signal="toggled" from="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3" to="MenuContainer/MainOptionsContainer/MainButtons/MultiPlayer3" method="_on_toggled"]
